samples/_failures_safe/1761477287_8c352b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64cdbd22.c: In function ‘main’:
./samples/SAFE/__tmp_64cdbd22.c:173:13: error: expected declaration or statement at end of input
  173 |             case DISPENSING:
      |             ^~~~
./samples/SAFE/__tmp_64cdbd22.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_64cdbd22.c:173:13: error: expected declaration or statement at end of input
